# Prompts-Of-Alexandria

./: FIRST_DESIGN.md  LICENSE  README.md  REDDIT.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
web/js/: alexandria_main.js
web/js/alexandria/: api.js  detection.js  nodes.js  storage.js  styles.js  ui.js  version.js
